--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "vuepress",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "vuepress": "^0.9.0"
-  },
   "devDependencies": {
     "cross-env": "^5.1.6"
   },
@@ -14,5 +10,8 @@
     "docs:build": "cross-env NODE_ENV=prod npx vuepress build docs"
   },
   "author": "fangdown",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "vuepress": "^0.10.0"
+  }
 }
