--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "fangdown",
   "license": "ISC",
   "dependencies": {
-    "vuepress": "^0.10.0"
+    "lru-cache": "^4.1.3",
+    "shebang-command": "^1.2.0",
+    "vuepress": "^0.10.0",
+    "which": "^1.3.1"
   }
 }
