--- a/fangdown/vue-manage/package.json
+++ b/fangdown/vue-manage/package.json
@@ -11,8 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cli-plugin-eslint": "0.0.1",
     "element-ui": "^2.4.11",
+    "localforage": "^1.7.3",
     "node-sass": "^4.11.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
