--- a/fangdown/vue-manage/package.json
+++ b/fangdown/vue-manage/package.json
@@ -34,6 +34,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "canvas2image": "^1.0.5",
+    "canvg": "^1.5.3",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
